wrappers/devolutions-crypto.h


int64_t ConstantTimeEquals(const uint8_t *x,
                           size_t x_length,
                           const uint8_t *y,
                           size_t y_length);
int64_t Decode(const uint8_t *input,
               size_t input_length,
               uint8_t *output,
               size_t output_length);
int64_t DecodeUrl(const uint8_t *input,
                  size_t input_length,
                  uint8_t *output,
                  size_t output_length);
int64_t Decrypt(const uint8_t *data,
                size_t data_length,
                const uint8_t *key,
                size_t key_length,
                uint8_t *result,
                size_t result_length);
int64_t DecryptAsymmetric(const uint8_t *data,
                          size_t data_length,
                          const uint8_t *private_key,
                          size_t private_key_length,
                          uint8_t *result,
                          size_t result_length);
int64_t DeriveKeyArgon2(const uint8_t *key,
                        size_t key_length,
                        const uint8_t *argon2_parameters,
                        size_t argon2_parameters_length,
                        uint8_t *result,
                        size_t result_length);
int64_t DeriveKeyPbkdf2(const uint8_t *key,
                        size_t key_length,
                        const uint8_t *salt,
                        size_t salt_length,
                        uint32_t niterations,
                        uint8_t *result,
                        size_t result_length);
int64_t Encode(const uint8_t *input,
               size_t input_length,
               uint8_t *output,
               size_t output_length);
int64_t EncodeUrl(const uint8_t *input,
                  size_t input_length,
                  uint8_t *output,
                  size_t output_length);
int64_t Encrypt(const uint8_t *data,
                size_t data_length,
                const uint8_t *key,
                size_t key_length,
                uint8_t *result,
                size_t result_length,
                uint16_t version);
int64_t EncryptAsymmetric(const uint8_t *data,
                          size_t data_length,
                          const uint8_t *public_key,
                          size_t public_key_length,
                          uint8_t *result,
                          size_t result_length,
                          uint16_t version);
int64_t EncryptAsymmetricSize(size_t data_length,
                              uint16_t version);
int64_t EncryptSize(size_t data_length, uint16_t version);
int64_t GenerateKey(uint8_t *key,
                    size_t key_length);
int64_t GenerateKeyPair(uint8_t *private_,
                        size_t private_length,
                        uint8_t *public_,
                        size_t public_length);
int64_t GenerateKeyPairSize(void);
int64_t GenerateSharedKey(uint8_t n_shares,
                          uint8_t threshold,
                          size_t length,
                          uint8_t *const *shares);
int64_t GenerateSharedKeySize(size_t secret_length);
int64_t GenerateSigningKeyPair(uint8_t *keypair,
                               size_t keypair_length,
                               uint16_t version);
int64_t GenerateSigningKeyPairSize(uint16_t _version);
int64_t GetDefaultArgon2Parameters(uint8_t *argon2_parameters,
                                   size_t argon2_parameters_length);
int64_t GetDefaultArgon2ParametersSize(void);
int64_t GetSigningPublicKey(const uint8_t *keypair,
                            size_t keypair_length,
                            uint8_t *public_,
                            size_t public_length);
int64_t GetSigningPublicKeySize(const uint8_t *_keypair, size_t _keypair_length);
int64_t HashPassword(const uint8_t *password,
                     size_t password_length,
                     uint32_t iterations,
                     uint8_t *result,
                     size_t result_length);
int64_t HashPasswordLength(void);
int64_t JoinShares(size_t n_shares,
                   size_t share_length,
                   const uint8_t *const *shares,
                   uint8_t *secret,
                   size_t secret_length);
int64_t JoinSharesSize(size_t share_length);
uint32_t KeySize(void);
int64_t MixKeyExchange(const uint8_t *private_,
                       size_t private_size,
                       const uint8_t *public_,
                       size_t public_size,
                       uint8_t *shared,
                       size_t shared_size);
int64_t MixKeyExchangeSize(void);
int64_t ScryptSimple(const uint8_t *password,
                     size_t password_length,
                     const uint8_t *salt,
                     size_t salt_length,
                     uint8_t log_n,
                     uint32_t r,
                     uint32_t p,
                     uint8_t *output,
                     size_t output_length);
int64_t ScryptSimpleSize(void);
int64_t Sign(const uint8_t *data,
             size_t data_length,
             const uint8_t *keypair,
             size_t keypair_length,
             uint8_t *result,
             size_t result_length,
             uint16_t version);
int64_t SignSize(uint16_t _version);
int64_t ValidateHeader(const uint8_t *data,
                       size_t data_length,
                       uint16_t data_type);
int64_t VerifyPassword(const uint8_t *password,
                       size_t password_length,
                       const uint8_t *hash,
                       size_t hash_length);
int64_t VerifySignature(const uint8_t *data,
                        size_t data_length,
                        const uint8_t *public_key,
                        size_t public_key_length,
                        const uint8_t *signature,
                        size_t signature_length);
int64_t Version(uint8_t *output,
                size_t output_length);
int64_t VersionSize(void);